<resources>
    <string name="app_name">Bruning Series</string>
    <string name="menu_season">Serien</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_submenu_settings">Einstellungen</string>
    <string name="menu_submenu_season">Serien</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Seasons_wait">Warte auf Burning Series</string>
    <string name="fragment_seasons_serach_hint">Suche hier deine Serie</string>
    <string name="season_example_text">Dein Serien Name</string>
    <string name="Episods_wait">Warte auf Burning Series</string>
    <string name="ep_spinner">Staffel</string>
    <string name="ep_spinner_special">Special</string>
    <string name="Episods_wait_season">Sammle Episoden für Staffel</string>
    <string name="fragment_hoster_wait">Sammle Hoster für Video Streaming</string>
    <string name="host_bad_request">Hoster nicht verfügbar</string>
    <string name="host_ups_error">Ups da ist uns ein Fehler unterlaufen</string>
    <string name="menu_towtach">Favoriten</string>
    <string name="title_activity_season">Season</string>
    <string name="ep_info_tab">Info</string>
    <string name="search_label">Suche nach Serien</string>
    <string name="search_hint">Suchen</string>
    <string name="crash_toast_text">Wir senden grade den Fehler an die Entwickler</string>
    <string name="menu_dash">Dashboard</string>
    <string name="crash_dialog_title">Send me the Crash</string>
    <string name="crash_dialog_ok_toast">Send ok</string>
    <string name="new_ep">Neue Episoden</string>
    <string name="tour_start">Willkommen!</string>
    <string name="tour_start_desc">Du kannst das Menü Öffnen wen du von Links nach rechts wicht</string>
    <string name="ep_spinner_search">Suche</string>
    <string name="cradview_support_hoster">Unterstützter Hoster</string>
    <string name="app_close">Drücke noch einmal zurück um die app zu schliessen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_donwloadfolder">Wähle den Download Ordner um dein Serien auch im Urlaub zu schauen</string>
    <string name="setting_hollyday_mode_title">Urlaubsmodus</string>
    <string name="setting_donwloadfolder_title">Urlaubs Modus Download Pfad</string>
    <string name="setting_hollyday_mode">Durch den Urlaubs Modus kannst du auch Unterwegs ohne Internet deine Serien an Schauen</string>
    <string name="setting_hollyday">Urlaub Einstellugen</string>
    <string name="setting_other">Andere Einstellugen</string>
    <string name="setting_hollyday_hoster_list">Urlaub Hoster</string>
    <string name="setting_hollyday_hoster_list_summary">Hier kannst du deine Hoster auswählen wo die Videos zur Verfügungen gestellt werden</string>
    <string name="episode_hollday">Offline verfügbar machen</string>
    <string name="episode_checkbox">Gesehen</string>
    <string name="chnangelog">Änderungen</string>
    <string name="about_ok">Ok</string>
    <string name="menu_info">Info</string>
    <string name="menu_episodes">Episoden</string>
    <string name="about_never">Nie wieder anzeigen</string>
</resources>
